<resources>
    <string name="app_name">GardeDex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating_button_text">button</string>
    <string name="pokemon_str">Pokémon</string>
    <string name="items_str">Items</string>
    <string name="machines_str">Machines</string>
    <string name="description">Description</string>
    <string name="area">Area</string>
    <string name="cry">Cry</string>
    <string name="stats">Stats</string>
    <string name="hp">HP</string>
    <string name="atk">Atk</string>
    <string name="def">Def</string>
    <string name="sa">SA</string>
    <string name="sd">SD</string>
    <string name="sp">Sp</string>
    <string name="pokedex">Pokedex</string>
    <string name="items">Items</string>
    <string name="machines">Machines</string>
    <string name="games_background">Games Background</string>
    <string name="pokedex_background">Pokedex Background</string>
</resources>