<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TittleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp" />

            <TextView
                android:id="@+id/hp"
                style="@style/GenericText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                style="@style/TittleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atk" />

            <TextView
                android:id="@+id/atk"
                style="@style/GenericText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                style="@style/TittleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/def" />

            <TextView
                android:id="@+id/def"
                style="@style/GenericText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                style="@style/TittleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sa" />

            <TextView
                android:id="@+id/sa"
                style="@style/GenericText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                style="@style/TittleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sd" />

            <TextView
                android:id="@+id/sd"
                style="@style/GenericText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                style="@style/TittleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp" />

            <TextView
                android:id="@+id/sp"
                style="@style/GenericText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>